@@ -2,6 +2,9 @@
 # Simple script that rips Hexen II Portal of Praevus cdrom audio tracks to a
 # format useable by Hammer of Thyrion (uHexen2). Needs cdparanoia and oggenc.
 
+# This particular script is to be used with the Hexen II: Portal of Praevus
+# i.e. the mission pack cdrom.
+
 # create directory
 mkdir -p portals/music
 cd portals/music
@@ -26,4 +29,5 @@ oggenc -q 6 -o track12.ogg track12.cdda.wav
 # remove .wav files
 rm *.wav
 
-echo -e "\n Ripping done, move portals/music/ directory to /your/path/to/hexen2/portals/music/"
+echo "Ripping done. Move all portals/music/*.ogg files"
+echo "to /your/path/to/hexen2/portals/music/ directory"
