@@ -15,6 +15,9 @@ Changes since the uhexen2-1.5.0 release:
 * DOS: Fixed a stack corruption bug in VESA initialization.
 * DOS: Added support for the -cddev command line arguments.
 * Unix: Added some paranoid checks for string buffer sizes.
+* Linux/Unix: Provided cd-rip scripts for less common game
+  media, i.e. the Xplosiv re-release and the Matrox m3D oem
+  versions.
 * All platforms: Fixed logic in the hwmquery tool that would
   cause less number of servers to be displayed than what had
   been received from hwmaster.
